# vytraty

./: .env.example  Cargo.toml  Containerfile  Dockerfile  README.md  compose.yaml
.cargo/: config.toml
entity/src/: user.rs
migration/src/: lib.rs  m20251115_161146_add_password_hash_to_user_table.rs
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/error/: mod.rs
src/errors/: auth.rs  mod.rs
src/middleware/: auth.rs
src/model/: auth.rs  category.rs  currency.rs  health.rs  mod.rs  record.rs  user.rs
src/models/: auth.rs  category.rs  record.rs  user.rs
src/repositories/: category.rs  record.rs  user.rs
src/repository/: category.rs  mod.rs  record.rs  user.rs
src/route/: auth.rs  categories.rs  doc.rs  health.rs  me.rs  mod.rs  records.rs
src/routes/: auth.rs  categories.rs  health.rs  mod.rs  records.rs  users.rs
src/service/: auth.rs  category.rs  health.rs  mod.rs  record.rs  user.rs
src/services/: auth.rs  category.rs  health.rs  mod.rs  record.rs  user.rs
src/utils/: jwt.rs  password.rs
tests/: tests.rs
