[package]
name = "backend_lab"
version = "0.3.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = { version = "0.8.6", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
rust_decimal = "1.39.0"
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-rust_decimal"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
