[package]
name = "vytraty"
version = "0.5.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros"] }
jiff = { version = "0.2", features = ["serde"] }
dotenvy = "0.15.7"
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
toasty = { version = "0.5.0", features = ["rust_decimal", "postgresql", "jiff"] }
